# vessel_dynamics

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json  package.xml
config/: mpc_params.yaml
depreceated/: milliampere_dynamics_stepInput.cpp  milliampere_dynamics_thruster_wo_pid.cpp  vessel_dynamics_node.cpp
include/vessel_kinematics/: mpc_controller.hpp  thrust_allocator.cpp  thrust_allocator.hpp  utils.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vessel_kinematics/lib/vessel_kinematics/: disturbances_node
install/vessel_kinematics/share/ament_index/resource_index/package_run_dependencies/: vessel_kinematics
install/vessel_kinematics/share/ament_index/resource_index/parent_prefix_path/: vessel_kinematics
install/vessel_kinematics/share/vessel_kinematics/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vessel_kinematics/share/vessel_kinematics/cmake/: vessel_kinematicsConfig.cmake
install/vessel_kinematics/share/vessel_kinematics/launch/: vessel.launch.py
install/vessel_kinematics/share/vessel_kinematics/rviz/: vessel.rviz
install/vessel_kinematics/share/vessel_kinematics/urdf/: milliampere.urdf.xacro  vessel_prism.urdf.xacro
launch/: vessel.launch.py
log/: latest_build
src/: disturbances_node.cpp  milliampere_controller_node.cpp  milliampere_dynamics_node.cpp  milliampere_dynamics_onCommand.cpp  mpc_controller_node.cpp  pid_controller_node.cpp  thrust_allocator.cpp  thrust_allocator_node.cpp  vessel_dynamics_node.cpp  vessel_kinematics_node.cpp
urdf/: milliampere.urdf.xacro
